<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">Next</string>
    <string name="preview_button">Prev</string>

    <string name="question_australia">How many days are warm in South Africa?</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean</string>
    <string name="question_africa">The source pf the Nile River is in Egypt</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake</string>

    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong!</string>
    <string name="show_answer_button">Show answer</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="api_info">Api version: %d</string>
    <string name="attemps_left">%d Attemps left</string>
</resources>